# KAgenda

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  create-plasmoid.sh  execute-oauth.sh  install.sh  kagenda.plasmoid  metadata.desktop  metadata.json  oauth-helper.desktop  oauth-helper.py  package.sh  run-oauth-helper.sh  run-oauth-wrapper.sh  test-minimal.qml  test-simple.qml
.github/: FUNDING.yml
.github/workflows/: build.yml
contents/config/: config.qml  main.xml
src/: GmailBackend.cpp  GmailBackend.h  plugin.cpp
ui/: ConfigGeneral.qml  ConfigModal.qml  EventItem.qml  config.qml  configGeneral.qml  main-basic.qml  main-complete.qml  main-final.qml  main-no-functions.qml  main-simple.qml  main-step1.qml  main-step2.qml  main-step2a.qml  main-step2b.qml  main-step2c.qml  main-step2d.qml  main-step2e.qml  main-step2f.qml  main-step2g.qml  main-step2h.qml  main-step3.qml  main-step4.qml  main-step5.qml  main-test-list.qml  main-test-scroll.qml  main-test.qml  main-with-loadconfig.qml  main-working.qml  main.qml
